# portfolio

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.dokku  LICENSE  README.md  SECURITY.md  biome.json  lighthouserc.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.base.json  turbo.json
.github/: dependabot.yml  og-card.html
.github/workflows/: ci.yml  codeql.yml  collect-jobs.yml  deploy-dokku.yml  lighthouse.yml  no-ai-slips.yml  playwright-image-lockstep.yml  quality-gates.yml  refresh-baselines.yml  release.yml  scorecard.yml  sonar.yml  terraform.yml  visual-regression.yml
.specify/memory/: constitution.md  roadmap.md
apps/web/: next.config.ts  package.json  tsconfig.json
docs/assets/: portfolio-grid.html
projects/ai-document-processor/: .env.example  Dockerfile.dokku  README.md  docker-compose.yml  package.json
projects/ai-document-processor/api/: Dockerfile  pyproject.toml
projects/ai-document-processor/api/app/: config.py  database.py  main.py  models.py  schemas.py
projects/ai-document-processor/api/app/pipeline/: classifier.py  extractor.py  field_extractor.py  processor.py
projects/ai-document-processor/api/app/routers/: documents.py
projects/automation-hub/: README.md  package.json
projects/exec-job-board/: Dockerfile.dokku  README.md  app.json  package.json  pyproject.toml  requirements.txt
projects/realestate-price-tracker/: .env.example  Dockerfile.dokku  README.md  app.json  package.json  (+1 more)
scripts/: marketing-apply-repo-metadata.sh  setup-dokku.sh  voice-lint.mjs
(+185 files in other folders)
